# MapleUnity

./: .gitignore  ALL_COMPILATION_ERRORS_FIXED.md  ALL_TESTS_FIXED.md  BACKGROUND_AND_TILE_FIXES.md  CHARACTER_RENDERING_ANALYSIS.md  CHARACTER_RENDERING_ANALYSIS_REPORT.md  CHARACTER_RENDERING_EXAMPLES.md  CHARACTER_RENDERING_FIX_SUMMARY.md  CHARACTER_RENDERING_FORMULAS_IMPLEMENTED.md  CHARACTER_RENDERING_ISSUE_REPORT.md  CHARACTER_RENDERING_MISALIGNMENT_REPORT.md  CHARACTER_RENDERING_VALIDATION_REPORT.md  CHARACTER_RENDERING_VERIFICATION_SUMMARY.md  CLAUDE.md  COMPILATION_FIXES.md  DEBUG_INSTRUCTIONS.md  FINAL_COMPILATION_FIXES.md  FINAL_FIXES_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_PLAYER_FIXES_SUMMARY.md  FINAL_SCENE_GENERATION_SUMMARY.md  FINAL_TEST_FIX_COMPLETE.md  FOOTHOLD_COLLISION_TESTING.md  FOOTHOLD_IMPLEMENTATION_SUMMARY.md  FOOTHOLD_INTEGRATION_SUMMARY.md  HENESYS_SCENE_FIXES_COMPLETE.md  HENESYS_TILE_ISSUE_SUMMARY.md  LICENSE  MAPLESTORY_PHYSICS_REPORT.md  MAP_GENERATION_FIXES_SUMMARY.md  OVERSIMPLIFICATIONS_ANALYSIS.md  PHYSICS_60FPS_UPDATE.md  PHYSICS_CONVERSION_SUMMARY.md  PHYSICS_IMPLEMENTATION.md  PHYSICS_IMPLEMENTATION_COMPLETE.md  PLATFORM_COLLISION_IMPLEMENTATION.md  PLAYER_ANIMATION_STATUS_REPORT.md  PLAYER_ISSUES_RESEARCH_REPORT.md  PLAYER_MOVEMENT_FIX.md  PLAYER_VISIBILITY_AND_MOVEMENT_FIXES.md  (+62 more)
.claude/: settings.local.json
.claude/agents/: log-analyzer.md  maple-architect.md  maple-client-debugger.md  maple-data-network.md  (+4 more)
NXWrapper/: CMakeLists.txt  NXWrapper.cpp  NXWrapper.h  NXWrapper.vcxproj  README.md  build.bat  build_vs.bat  compile_simple.bat  fix_project.bat  test_compile.bat
NXWrapper/NXWrapper/x64/Debug/: NXWrapper.dll.recipe  NXWrapper.ilk  vc143.idb
NXWrapper/NXWrapper/x64/Debug/NXWrapper.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  NXWrapper.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
NXWrapper/x64/Debug/: NXWrapper.exp  NXWrapper.lib
ProjectSettings/: ProjectSettings.asset  TagManager.asset
(+343 files in other folders)
